# candy

./: .gitignore  CMakeLists.txt  candy.cfg  dockerfile
.github/workflows/: ci.yaml  flutter.yaml
candy/: CMakeLists.txt
candy-cli/: CMakeLists.txt
candy-cli/src/: config.cc  config.h  main.cc
candy-service/src/: main.cc
candy/include/candy/: capi.h
candy/src/candy/: capi.cc  client.cc  server.cc
candy/src/core/: client.cc  client.h  message.h  net.cc  net.h
candy/src/netstack/: lwipopts.h  netstack.cc  netstack.h  outbound.cc  outbound.h  reactor.cc  reactor.h  router.cc  router.h  session.cc  session.h  session_icmp.cc  session_icmp.h  session_tcp.cc  session_tcp.h  session_udp.cc  session_udp.h  sockcompat.h  socks5_client.cc  socks5_client.h  stun.h  tcp_handshake.h  udpmux.cc  udpmux.h
candy/src/netstack/lwip-port/: sys_arch.c
candy/src/netstack/lwip-port/arch/: cc.h  perf.h  sys_arch.h
candy/src/peer/: manager.cc  manager.h  peer.cc  peer.h
candy/src/tun/: linux.cc  macos.cc  tun.cc  tun.h  unknown.cc  windows.cc
candy/src/utils/: hex.h  log.h  time.cc
candy/src/websocket/: client.cc  message.cc  server.cc  server.h
clients/flutter/: README.md  pubspec.yaml
clients/flutter/.dart_tool/: package_config.json  package_graph.json
clients/flutter/lib/: candy_bindings.dart  candy_daemon_client.dart  candy_service.dart  daemon_installer.dart  main.dart
clients/flutter/macos/Runner/: DebugProfile.entitlements  Release.entitlements
clients/flutter/macos/Runner.xcodeproj/: project.pbxproj
clients/flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
clients/flutter/macos/Runner/Configs/: AppInfo.xcconfig
clients/flutter/tool/: e2e_connect.dart  ffi_smoke.dart
cmake/: libev.cmake  lwip.cmake
cmake/openssl/: CMakeLists.txt
scripts/: bundle-macos-deps.sh
